# predictive-maintenance-rul

./: .gitignore  .pm_deps_hash_7763c733d4c1  README.md  pyproject.toml  run.py
configs/: default.yaml  thresholds.yaml
reports/: shap_top_drivers_one.yaml
src/predictive_maintenance/: calibrate.py  data.py  evaluate.py  explain.py  feature_catalog.py  feature_config.py  features.py  inference.py  labels.py  leakage_audit.md  main.py  model_registry.py  monitoring.py  predict.py  schemas.py  scripts_generate_synthetic.py  scripts_make_baseline_bins.py  scripts_make_features.py  scripts_make_labels.py  scripts_make_split.py  scripts_monitoring_report.py  scripts_profile_data.py  split.py  test_split.py  train.py  validation.py
src/predictive_maintenance/api/: main.py
src/predictive_maintenance/monitoring/: __init__.py  baseline.py  drift.py  logging.py
src/predictive_maintenance/ui/: app.py
tests/: test_health.py
